--- a/WalletApp.Api/appsettings.json
+++ b/WalletApp.Api/appsettings.json
@@ -12,6 +12,6 @@
     "TokenExpirationInMinutes": 10
   },
   "ConnectionStrings": {
-    "WalletAppDb": "Host=localhost;Port=5499;Database=wallet-app;Username=postgres;Password=2121"
+    "WalletAppDb": "Host=localhost;Port=5499;Database=test-wallet-app;Username=postgres;Password=2121"
   }
 }
