--- a/WalletApp.Persistence/WalletApp.Persistence.csproj
+++ b/WalletApp.Persistence/WalletApp.Persistence.csproj
@@ -22,4 +22,8 @@
       <ProjectReference Include="..\WalletApp.Domain\WalletApp.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations" />
+    </ItemGroup>
+
 </Project>
